--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             Choose a sedan for its affordability and excellent fuel economy.
             Ideal for cruising in the city or on your next road trip.
           </p>
-          <a href="#">Learn More</a>
+          <a href="#" class="link">Learn More</a>
         </div>
 
         <div class="card suvs">
@@ -33,7 +33,7 @@
             Take an SUV for its spacious interior, power, and versatility.
             Perfect for your next family vacation and off-road adventures.
           </p>
-          <a href="#">Learn More</a>
+          <a href="#" class="link">Learn More</a>
         </div>
 
         <div class="card luxury">
@@ -43,16 +43,15 @@
             Cruise in the best car brands without the bloated prices. Enjoy the
             enhanced comfort of a luxury rental and arrive in style.
           </p>
-          <a href="#">Learn More</a>
+          <a href="#" class="link">Learn More</a>
         </div>
       </div>
-
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Phil Jacks</a>.
-      </div>
     </div>
+    <!-- <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Phil Jacks</a>.
+    </div> -->
   </body>
 </html>
